--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,13 @@
     <string name="login_error">Login incorrecto</string>
     <string name="login_correcto">Login correcto</string>
     <string name="crear_alarma">Crear Alarma</string>
-    <string name="modificar_credenciales">Modifica credenciales</string>
     <string name="edit_text_name">Nombre</string>
     <string name="edit_text_passwd">Contraseña</string>
+    <string name="button_iniciar_sesion">Iniciar sesión</string>
+    <string name="button_crear_alarma">Crear alarma</string>
+    <string name="button_modificar_credenciales">Modificar credenciales</string>
+    <string name="button_ir_a_la_actividad">Ir a la actividad</string>
+    <string name="contrasenia">Contraseña:</string>
+
 
 </resources>
